@@ -32,6 +32,7 @@ const db = arangodb.db;
 const fs = require('fs');
 const console = require('console');
 const request = require("@arangodb/request");
+const internal = require('internal');
 const foxxManager = require('@arangodb/foxx/manager');
 
 const suspendExternal = require('internal').suspendExternal;
@@ -90,6 +91,40 @@ const queues = require('@arangodb/foxx/queues');
   db._drop('foxxqueuetest');
 }
 
+function responseIsSuccess(res) {
+  return res !== undefined && res.hasOwnProperty('status')
+    && 200 <= res.status && res.status < 300;
+}
+
+function sendCanFailAtTo(endpoint) {
+  const url = endpoint.replace(/^tcp:/, 'http:')
+    + "/_admin/debug/failat";
+
+  const res = request({method: 'GET', url: url});
+
+  return responseIsSuccess(res);
+}
+
+function sendSetFailAtTo(endpoint, failurePoint) {
+  const url = endpoint.replace(/^tcp:/, 'http:')
+    + "/_admin/debug/failat/"
+    + encodeURIComponent(failurePoint);
+
+  const res = request({method: 'PUT', url: url});
+
+  return responseIsSuccess(res);
+}
+
+function sendRemoveFailAtTo(endpoint, failurePoint) {
+  const url = endpoint.replace(/^tcp:/, 'http:')
+    + "/_admin/debug/failat/"
+    + encodeURIComponent(failurePoint);
+
+  const res = request({method: 'DELETE', url: url});
+
+  return responseIsSuccess(res);
+}
+
 function FoxxmasterSuite() {
   return {
     setUp: function() {
@@ -105,7 +140,7 @@ function FoxxmasterSuite() {
       let document = db._collection('foxxqueuetest').document('test');
       assertNotNull(document.server);
     },
-    
+
     testQueueFailover: function() {
       let document = db._collection('foxxqueuetest').document('test');
       let server = document.server;
@@ -149,7 +184,64 @@ function FoxxmasterSuite() {
       if (!ok) {
         throw new Error('Supervision should have moved the foxxqueues and foxxqueues should have been started to run on a new coordinator');
       }
+    },
+
+    testQueueFailoverDuringJob: function() {
+      let document = db._collection('foxxqueuetest').document('test');
+      let server = document.server;
+      assertNotNull(server);
+
+      let instance = instanceInfo.arangods.filter(arangod => {
+        if (arangod.role === 'agent') {
+          return false;
+        }
+        let url = arangod.endpoint.replace(/tcp/, 'http') + '/_admin/server/id';
+        let res = request({method: 'GET', url: url});
+        let parsed = JSON.parse(res.body);
+        return parsed.id === server;
+      })[0];
+
+      assertNotUndefined(instance);
+
+      if (!sendCanFailAtTo(instance.endpoint)) {
+        console.info("Failure tests disabled, skipping...");
+        return;
+      }
+
+      // The process should now suspend while the next job is in progress
+      assertTrue(
+        sendSetFailAtTo(instance.endpoint, "foxxmaster::queuetest")
+      );
+
+      let newEndpoint = instanceInfo.arangods.filter(arangod => {
+        return arangod.role === 'coordinator' && arangod.pid !== instance.pid;
+      })[0];
+      arango.reconnect(newEndpoint.endpoint, db._name(), 'root', '');
+      let waitInterval = 1;
+      let waited = 0;
+      let ok = false;
+      while (waited <= 30) {
+        document = db._collection('foxxqueuetest').document('test');
+        let newServer = document.server;
+        if (server !== newServer) {
+          ok = true;
+          break;
+        }
+        wait(waitInterval);
+        waited += waitInterval;
+      }
+      // Continue the process and remove the failure point
+      assertTrue(continueExternal(instance.pid));
+      assertTrue(
+        sendRemoveFailAtTo(instance.endpoint, "foxxmaster::queuetest")
+      );
+      // mop: currently supervision would run every 5s
+      // vadim: but that is not guaranteed that a Foxx service will be srarted right after that, so the timeout of expected 'newServer' was raised to 30s
+      if (!ok) {
+        throw new Error('Supervision should have moved the Foxx queues and Foxx queues should have been started to run on a new coordinator');
+      }
     }
+
   };
 }
 
