@@ -465,6 +465,15 @@ global.DEFINE_MODULE('internal', (function () {
   }
 
   // //////////////////////////////////////////////////////////////////////////////
+  // / @brief getPid
+  // //////////////////////////////////////////////////////////////////////////////
+
+  if (global.SYS_GET_PID) {
+    exports.getPid = global.SYS_GET_PID;
+    delete global.SYS_GET_PID;
+  }
+
+  // //////////////////////////////////////////////////////////////////////////////
   // / @brief rand
   // //////////////////////////////////////////////////////////////////////////////
 
