@@ -425,6 +425,15 @@
     delete global.SYS_DEBUG_REMOVE_FAILAT;
   }
   // //////////////////////////////////////////////////////////////////////////////
+  // / @brief debugShouldFailAt
+  // //////////////////////////////////////////////////////////////////////////////
+
+  if (global.SYS_DEBUG_SHOULD_FAILAT) {
+    exports.debugShouldFailAt = global.SYS_DEBUG_SHOULD_FAILAT;
+    delete global.SYS_DEBUG_SHOULD_FAILAT;
+  }
+
+  // //////////////////////////////////////////////////////////////////////////////
   // / @brief debugClearFailAt
   // //////////////////////////////////////////////////////////////////////////////
   if (global.SYS_DEBUG_CLEAR_FAILAT) {
