@@ -22,10 +22,17 @@
 // / @author Alan Plum
 // //////////////////////////////////////////////////////////////////////////////
 
-const isCluster = require('@arangodb/cluster').isCluster();
+const cluster = require('@arangodb/cluster');
+const isCluster = cluster.isCluster();
 const tasks = require('@arangodb/tasks');
 const db = require('@arangodb').db;
 const foxxManager = require('@arangodb/foxx/manager');
+
+const coordinatorId = (
+  isCluster && cluster.isCoordinator()
+  ? cluster.coordinatorId()
+  : undefined
+);
 
 var runInDatabase = function () {
   var busy = false;
@@ -64,9 +71,13 @@ var runInDatabase = function () {
           }
 
           jobs.forEach(function (job) {
-            db._jobs.update(job, {
+            const update = {
               status: 'progress'
-            });
+            };
+            if (isCluster) {
+              update.startedBy = coordinatorId;
+            }
+            db._jobs.update(job, update);
             tasks.register({
               command: function (cfg) {
                 var db = require('@arangodb').db;
@@ -95,6 +106,55 @@ var runInDatabase = function () {
   }
 };
 
+const resetDeadJobs = function () {
+  const queues = require('@arangodb/foxx/queues');
+
+  const initialDatabase = db._name();
+  db._databases().forEach(function (name) {
+    try {
+      db._useDatabase(name);
+      db._jobs.toArray().filter(function (job) {
+        return job.status === 'progress';
+      }).forEach(function (job) {
+        db._jobs.update(job._id, {status: 'pending'});
+      });
+      if (!isCluster) {
+        queues._updateQueueDelay();
+      } else {
+        global.KEYSPACE_CREATE('queue-control', 1, true);
+      }
+    } catch (e) {
+      // noop
+    }
+  });
+  db._useDatabase(initialDatabase);
+};
+
+const resetDeadJobsOnFirstRun = function () {
+  const foxxmasterInitialized
+    = global.KEY_GET('queue-control', 'foxxmasterInitialized') || 0;
+  const foxxmasterSince = global.ArangoServerState.getFoxxmasterSince();
+
+  if (foxxmasterSince <= 0) {
+    console.error(
+      "It's unknown since when this is a Foxxmaster. "
+      + 'This is probably a bug in the Foxx queues, please report this error.'
+    );
+  }
+  if (foxxmasterInitialized > foxxmasterSince) {
+    console.error(
+      'HLC seems to have decreased, which can never happen. '
+      + 'This is probably a bug in the Foxx queues, please report this error.'
+    );
+  }
+
+  if (foxxmasterInitialized < foxxmasterSince) {
+    // We've not run this (successfully) since we got to be Foxxmaster.
+    resetDeadJobs();
+    global.KEY_SET('queue-control', 'foxxmasterInitialized', foxxmasterSince);
+  }
+};
+
 exports.manage = function () {
   if (!global.ArangoServerState.isFoxxmaster()) {
     return;
@@ -102,6 +162,9 @@ exports.manage = function () {
 
   if (global.ArangoServerState.getFoxxmasterQueueupdate()) {
     if (isCluster) {
+      // Reset jobs before updating the queue delay. Don't continue on errors,
+      // but retry later.
+      resetDeadJobsOnFirstRun();
       var foxxQueues = require('@arangodb/foxx/queues');
       foxxQueues._updateQueueDelay();
     } else {
@@ -176,26 +239,9 @@ exports.run = function () {
   }
 
   global.KEYSPACE_CREATE('queue-control', 1, true);
-
-  var initialDatabase = db._name();
-  db._databases().forEach(function (name) {
-    try {
-      db._useDatabase(name);
-      db._jobs.toArray().filter(function(job) {
-        return job.status === 'progress';
-      }).forEach(function(job) {
-        db._jobs.update(job._id, { status: 'pending' });
-      });
-      if (!isCluster) {
-        queues._updateQueueDelay();
-      } else {
-        global.KEYSPACE_CREATE('queue-control', 1, true);
-      }
-    } catch (e) {
-      // noop
-    }
-  });
-  db._useDatabase(initialDatabase);
+  if (!isCluster) {
+    resetDeadJobs();
+  }
 
   if (tasks.register !== undefined) {
     tasks.register({
